--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,3 +39,12 @@ services:
     command: server --console-address ':9001' /data
     privileged: true
     restart: always
+
+  etcd:
+    image: bitnami/etcd
+    ports:
+      - 2379:2379
+      - 2380:2380
+    environment:
+      - ALLOW_NONE_AUTHENTICATION=yes
+      - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
