--- a/web/client/package.json
+++ b/web/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "element-plus": "^2.4.0",
+    "jquery": "^3.7.1",
     "pinia": "^2.1.6",
     "sass": "^1.69.3",
     "vue": "^3.3.4",
