--- a/web/client/package.json
+++ b/web/client/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.5.1",
     "element-plus": "^2.4.0",
     "jquery": "^3.7.1",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.69.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
