--- a/web/client/package.json
+++ b/web/client/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.1.7",
     "pinia-plugin-persist": "^1.0.0",
     "sass": "^1.69.3",
+    "to-fast-properties": "^4.0.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
