--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,6 @@ services:
     ports:
       - 3306:3306
 
-  adminer:
-    image: adminer
-    # restart: always
-    ports:
-      - 18080:8080
-
   redis:
     image: redis
     # restart: always
@@ -48,3 +42,13 @@ services:
     environment:
       - ALLOW_NONE_AUTHENTICATION=yes
       - ETCD_ADVERTISE_CLIENT_URLS=http://etcd:2379
+
+  jaeger:
+    image: jaegertracing/all-in-one:latest
+    environment:
+      - COLLECTOR_OTLP_ENABLED=true
+    ports:
+      - "16686:16686"
+      # - "14250:14250"
+      # - "14268:14268"
+      - "6831:6831/udp"
