--- a/server/service/api/config.yaml
+++ b/server/service/api/config.yaml
@@ -1,7 +1,7 @@
 host: "127.0.0.1"
 port: "8848"
-group: "USER_GROUP"
+group: "API_GROUP"
 user: "nacos"
 password: "nacos"
-dataid: "user_server"
-namespace: '42aca654-4b38-4ddb-9d4d-c95b7bd33cc5'
+dataid: "api_server"
+namespace: "d13b2044-fbb7-4872-8a2a-b98cadc546e4"
