--- a/server/service/user/config.yaml
+++ b/server/service/user/config.yaml
@@ -4,4 +4,4 @@ group: "USER_GROUP"
 user: "nacos"
 password: "nacos"
 dataid: "user_server"
-namespace: '42aca654-4b38-4ddb-9d4d-c95b7bd33cc5'
+namespace: "d13b2044-fbb7-4872-8a2a-b98cadc546e4"
