--- a/deployment/otel.yml
+++ b/deployment/otel.yml
@@ -13,12 +13,10 @@ exporters:
   logging:
     loglevel: debug
 
-  otlp:
-    endpoint: jaeger-all-in-one:14250
-    # endpoint: 127.0.0.1:14250
+  otlp/jaeger:
+    endpoint: jaeger-all-in-one:4317
     tls:
       insecure: true
-
 
 processors:
   batch:
@@ -36,7 +34,7 @@ service:
     traces:
       receivers: [otlp]
       processors: [batch]
-      exporters: [logging, otlp]
+      exporters: [logging, otlp/jaeger]
     metrics:
       receivers: [otlp]
       processors: [batch]
