--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -75,6 +75,7 @@ services:
       - "14268"
       - "14250:14250"
       - "6831:6831"
+      - "4317"   # OTLP gRPC receiver
     networks:
       - blink
   # Victoriametrics
