--- a/deployment/nacos/nacos-docker/standalone-mysql-8.yaml
+++ b/deployment/nacos/nacos-docker/standalone-mysql-8.yaml
@@ -13,7 +13,7 @@ services:
     depends_on:
       mysql:
         condition: service_healthy
-    restart: always
+    #restart: always
     networks:
       - nacos
   mysql:
