--- a/web/client/package.json
+++ b/web/client/package.json
@@ -16,7 +16,9 @@
     "@bytemd/plugin-gfm": "^1.21.0",
     "@bytemd/plugin-highlight-ssr": "^1.21.0",
     "@kangc/v-md-editor": "^2.3.18",
+    "@vueuse/core": "^10.7.2",
     "axios": "^1.5.1",
+    "canvas-confetti": "^1.9.2",
     "element-plus": "^2.4.0",
     "jquery": "^3.7.1",
     "mavon-editor": "^2.10.4",
