--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
 version: "3.7"
 services:
   db:
-    # container_name: blinkable-mysql
-    image: mysql
+    # container_name: blinkable-mysql image: mysql
     # restart: always
     environment:
       MYSQL_ROOT_PASSWORD: blinkable
